# Ara

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
.github/workflows/cmake_toolchains/: aarch64-apple-darwin.cmake  aarch64-appleios-darwin.cmake  aarch64-appletv-darwin.cmake  aarch64-linux-android.cmake  aarch64-linux-gnu.cmake  aarch64-tizenihd-linux-gnueabi.cmake  aarch64-tizeniot-linux-gnu.cmake  aarch64-unknown-freebsd.cmake  aarch64-unknown-linux-gnu.cmake  aarch64-unknown-linux-musl.cmake  aarch64-unknown-serenity.cmake  aarch64-w64-mingw32.cmake  alpha-linux-gnu.cmake  alpha-unknown-linux-gnu.cmake  alpha-unknown-netbsd.cmake  alpha-unknown-openbsd.cmake  arm-bookeen-linux-gnueabi.cmake  arm-cervantes-linux-gnueabi.cmake  arm-kindle-linux-gnueabi.cmake  arm-kindle5-linux-gnueabi.cmake  arm-kindlepw2-linux-gnueabi.cmake  arm-kobo-linux-gnueabihf.cmake  arm-linux-gnueabi.cmake  arm-linux-gnueabihf.cmake  arm-obreey-linux-gnueabi.cmake  arm-remarkable-linux-gnueabihf.cmake  arm-tizenihd-linux-gnueabi.cmake  arm-tizenihld-linux-gnueabi.cmake  arm-tizeniot-linux-gnueabi.cmake  arm-tizeniotheadless-linux-gnueabi.cmake  arm-tizenmd-linux-gnueabi.cmake  arm-tizenmobile-linux-gnueabi.cmake  arm-tizenwd-linux-gnueabi.cmake  arm-tizenwearable-linux-gnueabi.cmake  arm-unknown-freebsd.cmake  arm-unknown-linux-gnueabi.cmake  arm-unknown-linux-gnueabihf.cmake  arm-unknown-linux-musleabihf.cmake  armv7-appleios-darwin.cmake  armv7-w64-mingw32.cmake  (+76 more)
scripts/: android-install.sh  ssl.h.py
src/: ara.h  buffer.c  buffer.h  buffer_cleanup.h  cacert.h  callbacks.c  callbacks.h  cir.c  cir.h  cleanup.c  cleanup.h  credentials.c  credentials.h  curl.c  curl.h  curl_cleanup.c  curl_cleanup.h  cyberclass.c  cyberclass.h  embed_stream.c  embed_stream.h  errors.c  errors.h  estrategia.c  estrategia.h  estrategia_concursos.c  estrategia_concursos.h  estrategia_medicina.c  estrategia_medicina.h  estrategia_militares.c  estrategia_militares.h  estrategia_vestibulares.c  estrategia_vestibulares.h  ffmpeg.c  ffmpeg.h  filesystem.c  filesystem.h  focus_concursos.c  focus_concursos.h  fstream.c  (+62 more)
